2008-01-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-describe-bindings): Make it possible to use
	xrefs, i.e. [back] and [forward] buttons, in *Help* buffer.

2008-01-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-trim): Use append, not concat.

2008-01-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-read-summary-keys): Work for some `A'
	prefix keys.
	(gnus-article-read-summary-send-keys): Use gnus-character-to-event.
	(gnus-article-describe-bindings): Simplify; move XEmacs stuff to
	gnus-xmas.el.

2008-01-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-marks, gnus-registry-default-mark):
	Add new variables for article mark management.
	(gnus-registry-extra-entries-precious, gnus-registry-trim): Define a
	list of extra data entries which, when present, will indicate that the
	article ID should not be trimmed from the registry.
	(gnus-registry-mark-article, gnus-registry-article-marks): Remove these
	functions.
	(gnus-registry-read-mark): New function to read a mark name from the
	user.
	(gnus-registry-set-article-mark, gnus-registry-remove-article-mark)
	(gnus-registry-set-article-mark-internal): New functions to add and
	remove marks.
	(gnus-registry-get-article-marks): New function to show the marks for
	an article, or retrieve them for further use.

2008-01-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-describe-bindings): Show all `S' prefix
	keys when no argument is given.

2008-01-12  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-article-sort-by-random)
	(gnus-thread-sort-by-random): Fix doc strings.  Reported by
	jidanni@jidanni.org.

2008-01-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-describe-bindings): New function.
	(gnus-article-read-summary-keys): Use it.
	(gnus-article-mode-map): Bind `C-h b' to it.

2008-01-10  Katsumi Yamaoka  <yamaoka@jpl.org>
